<resources>
    <string name="app_name">OpenglDemo</string>
    <string name="action_settings">Settings</string>
    <string name="button_opengldemo_tutorial1">Tutorial1</string>
    <string name="button_opengldemo_tutorial2">Tutorial2</string>
    <string name="button_opengldemo_tutorial3">Tutorial3</string>
    <string name="button_opengldemo_tutorial4">Tutorial4</string>
    <string name="button_opengldemo_tutorial5">Tutorial5</string>
    <string name="button_opengldemo_tutorial6">Tutorial6</string>
    <string name="button_opengldemo_tutorial7">Tutorial7</string>
    <string name="button_opengldemo_tutorial8">Tutorial8</string>

</resources>
