<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.app.opengldemo.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/opengl_demo_tutorial1"
        android:text="@string/button_opengldemo_tutorial1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/opengl_demo_tutorial2"
        android:text="@string/button_opengldemo_tutorial2"
        android:layout_toRightOf="@+id/opengl_demo_tutorial1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/opengl_demo_tutorial3"
        android:text="@string/button_opengldemo_tutorial3"
        android:layout_toRightOf="@+id/opengl_demo_tutorial2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/opengl_demo_tutorial4"
        android:text="@string/button_opengldemo_tutorial4"
        android:layout_below="@+id/opengl_demo_tutorial1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/opengl_demo_tutorial5"
        android:text="@string/button_opengldemo_tutorial5"
        android:layout_toRightOf="@+id/opengl_demo_tutorial4"
        android:layout_below="@+id/opengl_demo_tutorial2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/opengl_demo_tutorial6"
        android:text="@string/button_opengldemo_tutorial6"
        android:layout_toRightOf="@+id/opengl_demo_tutorial5"
        android:layout_below="@+id/opengl_demo_tutorial3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
